# ac14

./: .gitignore  AGENTS.md  CLAUDE.md  KNOWLEDGE.md  Makefile  PROJECT.md  README.md  RESTART_MANIFEST.md  meta-process.yaml  pyproject.toml
ac14/: __init__.py  __main__.py  acceptance.py  atomic_io.py  blueprint_planning.py  codegen_context.py  codex_codegen.py  comparison.py  dependency_execution.py  dependency_planning.py  discovery.py  draft_authoring.py  empirical_comparison.py  evidence_bundle.py  examples.py  freeze_decision.py  freeze_retry.py  front_half_acceptance.py  front_half_first_empirical.py  generated_codegen.py  generated_evidence.py  llm_codegen.py  loader.py  meta_process_policy.py  model_validation.py  models.py  output_diff.py  packet_sufficiency.py  packet_tests.py  packets.py  recommendation.py  recomposition.py  reference_components.py  retrieval.py  runtime.py  semantic_comparison.py  semantic_suite.py  structured_inputs.py  structured_spec.py  structured_spec_benchmark.py  (+4 more)
docs/: AC14_ANTI_DRIFT_DOCTRINE.md  AC14_IMPLEMENTATION_STATUS.md  AC14_META_PROCESS_ADOPTION_PLAN.md  AC14_NEXT_24_HOURS.md  AC14_ROADMAP.md  ARTIFACTS.md  CONCERNS.md  HANDOFF_2026_04_02.md  METHODOLOGY.md  TODO.md  UNCERTAINTIES.md  VALIDATION.md  theory_forge_series_summary.md  wiki_manifest.yaml
hooks/: commit-msg
notebooks/: 00_ac14_master_journey.ipynb  01_ac14_execution_status_journey.ipynb  02_ac14_empirical_comparison_gate.ipynb  notebook_registry.yaml
prompts/: draft_blueprint_plan.yaml  draft_blueprint_plan_from_structured_spec.yaml  evaluate_packet_case.yaml  (+9 more)
(+366 files in other folders)
